testsuite/tests/properties/invalid_and_or/logic_any.lkt
import common

class Example: FooNode implements TokenNode {
    @ignored fun f(b1: Bool, b2: Bool, b3: Bool): Bool = %any(b1, b2, b3)
}
